IE Column not showing correctly

--- a/wirewerks/client/ui/src/styles/general/_ww.scss
+++ b/wirewerks/client/ui/src/styles/general/_ww.scss
@@ -707,11 +707,13 @@ ww-carousel {
 
 ww-carousel {
 	.degraded {
-		ww-part {
+		ww-part-category .part-column.nav-focused ww-part {
 			transition: none;
 		}
+	}
 
-		content {
+	ww-part-category {
+		.content {
 			ww-part {
 				transition: none;
 			}
